.deploy/deployment-beta.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webproject-beta
  name: webproject-beta
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: webproject-beta
  template:
    metadata:
      labels:
        app: webproject-beta
    spec:
      containers:
      - image: rjhaikal/dotnet-websample:v1.0.0
        imagePullPolicy: Always
        name: webproject-beta
        ports:
        - containerPort: 80
          name: webproject-beta
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webproject-beta
  name: webproject-beta
spec:
  ports:
  - name: "webproject-beta-service"
    port: 80
  selector:
    app: webproject-beta
