.deploy/ingress-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webproject-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: websample.rjhaikal.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webproject-stable
                port:
                  number: 80
